2017-07-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	Fix cookies handling ([emacs-w3m:12768], [emacs-w3m:12772])

	Regard a Set-Cookie header as it contains a single cookie, that is,
	the one at the beginning of the field is it and succeeding semi-colon
	separated ones are the attributions of it.  Formerly the Lisp code
	regarded the semi-colon separated ones as all individual cookies, and
	therefore the locally stored cookies would potentially be all bogus.
	So, we highly recommend resetting it once when you start using or if
	you are already using this version of w3m-cookie.el.  To do that,
	shutdown Emacs and delete the "~/.w3m/.cookie" file (or the ".cookie"
	file existing in the `w3m-profile-directory').

	* w3m-cookie.el (w3m-cookie-parse-args): Reverse the order of the value.
	(w3m-cookie-1-set): Regard a Set-Cookie header as it contains a single
	cookie; prefer Max-Age than Expires and convert it to Expires.
	(w3m-cookie-get): Use "NAME", not "NAME=", if the value of NAME is null.

2017-07-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-content-type-alist): Exclude zero-length extension.
	(w3m-canonicalize-url): Test preferentially if URL is a local file.

2017-07-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-url-invalid-regexp): Remove.
	(w3m-url-valid): Use w3m-url-invalid-base instead.  [emacs-w3m:12767]

2017-07-20  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el, w3m-util.el (w3m-url-fallback-base):
	Rename `w3m-url-fallback-base' to more descriptive
	`w3m-url-invalid-base' ([emacs-w3m:12763]).

2017-07-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el (w3m-filter-subst-disabled-with-readonly):
	Work for two or more disabled tags.

2017-07-16  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-canonicalize-url): Make scheme default to https, not http.
	[emacs-w3m:12749]

2017-07-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-delete-frames-and-windows): Replace `one-window-p'